# fastapi-boilerplate

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE.TXT  README.md  pyproject.toml
prisma/: schema.prisma
prisma/migrations/20240614075938_create_pet_model/: migration.sql
scripts/: db-down.sh  db-up.sh  docker-compose.yaml
src/app/: main.py  setup.py
src/app/account/: account_module.py  auth_controller.py  auth_record.py  auth_schema.py  auth_service.py
src/app/common/: common_api_route.py  common_decorator.py  common_entity.py  common_module.py  common_schema.py  errors.py  exceptions.py
src/app/common/exception_handler/: validation_exception_handler.py
src/app/common/interface/: icontroller.py  iexception_handler.py  ihttp_middleware.py  imodule.py  iroute_guard.py
src/app/common/middleware/: log_access_middleware.py
src/app/config/: config_entity.py  config_module.py  config_schema.py  config_service.py
src/app/data/: data_module.py  data_service.py
src/app/general/: crypto_service.py  general_controller.py  general_entity.py  general_module.py  general_service.py
src/app/general/exception_handler/: exception_handlers.py  validation_exception_handler.py
src/app/general/guard/: auth_guard.py
src/app/general/middleware/: authentication_middleware.py  log_access_middleware.py
src/app/health/: health_check_manager.py  health_controller.py  health_module.py
src/app/logging/: logger.py  logging_module.py  logging_service.py
src/app/migrations/models/: 0_20250327100000_init.py  1_20250327100100_create_pets_table.py  2_20250516101924_create_refresh_token_table.py
src/app/pet/: pet_controller.py  pet_entity.py  pet_model.py  pet_module.py  pet_record.py  pet_schema.py  pet_service.py
tests/: app_manager.py  conftest.py  test_app.py  test_auth.py  test_health.py  test_pet.py
